# point-cloud-processing__sandbox

./: .gitignore  README.md
_datasets/: README.md
classic-approaches/Iterative-Hough-Transform-for-Line-Detection-in-3D-Point-Clouds/: .gitignore  README.md  _project.code-workspace  docker-compose.yml
classic-approaches/Iterative-Hough-Transform-for-Line-Detection-in-3D-Point-Clouds/.devcontainer/: devcontainer.json
classic-approaches/Iterative-Hough-Transform-for-Line-Detection-in-3D-Point-Clouds/app/: build.sh
classic-approaches/Iterative-Hough-Transform-for-Line-Detection-in-3D-Point-Clouds/app/cmake/: CMakeLists.txt
classic-approaches/Iterative-Hough-Transform-for-Line-Detection-in-3D-Point-Clouds/app/libs/hough3d/: hough.h  pointcloud.cpp
classic-approaches/Iterative-Hough-Transform-for-Line-Detection-in-3D-Point-Clouds/app/src/: main.cpp
classic-approaches/Iterative-Hough-Transform-for-Line-Detection-in-3D-Point-Clouds/docker/ubuntu/: Dockerfile  install-cmake.sh  setup.sh
classic-approaches/hough-ransac-dbscan/: _point-cloud-playground.code-workspace  dbscan.py  hough.py  main.py  ransac.py
classic-approaches/hough-ransac-dbscan/data_formats/: line.py  off.py  txt.py
classic-approaches/hough-ransac-dbscan/entities/: PointCloud.py  Visualizer.py
classic-approaches/hough-ransac-dbscan/utils/: files.py  geometry.py
ml-approaches/pointnet/: main.py
